[package]
name = "gpu_test"
version = "0.1.0"
edition = "2021"
authors = ["AKORA"]
description = "A simple mandelbrot renderer using the wgpu crate"
readme = "./README.md"
publish = false
repository = "https://github.com/A-K-O-R-A/gpu_test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
